working version. try to find more efficient version of instance norm, particularly the "broadcasting" part

--- a/demos/style-transfer/styletransfer.html
+++ b/demos/style-transfer/styletransfer.html
@@ -65,8 +65,8 @@
       </paper-listbox>
     </paper-dropdown-menu>
 
-    <div id="currentImageContainer">
-      <img id="currentImg"/>
+    <div id="canvasContainer">
+      <canvas id="imageCanvas" width="300" height="300"></canvas>
     </div>
 
     <div class="train-button-container">
