--- a/demos/style-transfer/styletransfer.html
+++ b/demos/style-transfer/styletransfer.html
@@ -7,10 +7,33 @@
 
 <dom-module id="styletransfer-demo">
 <style>
-  #inputContainer {
-    margin: 0 auto;
-    width: 800px;
+  #pagewrap {
+    padding: 5px;
+    width: 960px;
+    margin: 20px auto;
   }
+  header {
+    height: 100px;
+    padding: 0 15px;
+  }
+  #content {
+    width: 420px;
+    float: left;
+    padding: 5px 15px;
+  }
+
+  #style {
+    width: 424px; /* Account for margins + border values */
+    float: right;
+    padding: 5px 15px;
+    margin: 0px 5px 5px 5px;
+  }
+  
+  footer {
+    clear: both;
+    padding: 0 15px;
+  }
+
   #activationsContainer, #webcam-message, #ssl-message {
     text-align: center;
   }
@@ -33,62 +56,65 @@
   }
 </style>
 <template>
-  <div id="container"></div>
 
-  <div id="inputContainer">
+  <div id="pagewrap">
 
-    <div id="contentImageContainer">
-      <img id="contentImg"/>
-    </div>
-
-    <div id="styleImageContainer">
-      <img id="styleImg"/>
-    </div>
-
-    <paper-dropdown-menu no-animations label="Content">
-      <paper-listbox attr-for-selected="value" id="content-dropdown" class="dropdown-content" selected="{{selectedContentName}}" slot="dropdown-content">
-        <template is="dom-repeat" items="[[contentNames]]">
-          <paper-item value="[[item]]" label="[[item]]">
-            [[item]]
-          </paper-item>
-        </template>
-      </paper-listbox>
-    </paper-dropdown-menu>
-
-    <input type="file" id="fileSelect" style="display: none" accept="image/x-png,image/gif,image/jpeg"/>
-
-    <paper-dropdown-menu no-animations label="Style">
-      <paper-listbox attr-for-selected="value" id="style-dropdown" class="dropdown-content" selected="{{selectedStyleName}}" slot="dropdown-content">
-        <template is="dom-repeat" items="[[styleNames]]">
-          <paper-item value="[[item]]" label="[[item]]">
-            [[item]]
-          </paper-item>
-        </template>
-      </paper-listbox>
-    </paper-dropdown-menu>
-
-    <div id="canvasContainer">
-      <canvas id="imageCanvas" width="300" height="300"></canvas>
-    </div>
-
-    <div class="train-button-container">
-      <paper-button class="button" raised id="start">Start</paper-button>
-    </div>
-
-    <div>Status: [[status]]</div>
-
-    <paper-dialog id="webcam-dialog" modal>
-      <h2>Take a photo</h2>
-      <video id="webcamVideo" width="500" height="400"></video>
-      <div class="buttons">
-        <paper-button id='closeModal' dialog-dismiss>Cancel</paper-button>
-        <paper-button id='takePicButton' dialog-confirm autofocus>Take the pic!</paper-button>
+    <section id="content">
+      <div id="imgContainer" align="middle">
+        <img id="contentImg"/>
+        <paper-dropdown-menu no-animations label="Content">
+          <paper-listbox attr-for-selected="value" id="content-dropdown" class="dropdown-content" selected="{{selectedContentName}}" slot="dropdown-content">
+            <template is="dom-repeat" items="[[contentNames]]">
+              <paper-item value="[[item]]" label="[[item]]">
+                [[item]]
+              </paper-item>
+            </template>
+          </paper-listbox>
+        </paper-dropdown-menu>
       </div>
-    </paper-dialog>
+    </section>
 
-    <canvas id="hiddenCanvas" style="display: none"></canvas>
+    <section id="style">
+      <div id="imgContainer" align="middle">
+        <img id="styleImg"/>
+        <paper-dropdown-menu no-animations label="Style">
+          <paper-listbox attr-for-selected="value" id="style-dropdown" class="dropdown-content" selected="{{selectedStyleName}}" slot="dropdown-content">
+            <template is="dom-repeat" items="[[styleNames]]">
+              <paper-item value="[[item]]" label="[[item]]">
+                [[item]]
+              </paper-item>
+            </template>
+          </paper-listbox>
+        </paper-dropdown-menu>
+      </div>
+    </section>
 
+    <footer>
+      <div class="train-button-container" align="middle">
+        <paper-button class="button" raised id="start">Start Style Transfer</paper-button>
+      </div>
+      <div id="canvasContainer" align="middle">
+        <canvas id="imageCanvas" width="300" height="300"></canvas>
+      </div>
+    </footer>
+    
   </div>
+    
+  <input type="file" id="fileSelect" style="display: none" accept="image/x-png,image/gif,image/jpeg"/>
+  
+
+  <div>Status: [[status]]</div>
+
+  <paper-dialog id="webcam-dialog" modal>
+    <h2>Take a photo</h2>
+    <video id="webcamVideo" width="500" height="375"></video>
+    <div class="buttons">
+      <paper-button id='closeModal' dialog-dismiss>Cancel</paper-button>
+      <paper-button id='takePicButton' dialog-confirm autofocus>Take the pic!</paper-button>
+    </div>
+  </paper-dialog>
+
+  <canvas id="hiddenCanvas" style="display: none"></canvas>
 
 </template>
 </dom-module>
