--- a/demos/style-transfer/styletransfer.html
+++ b/demos/style-transfer/styletransfer.html
@@ -37,7 +37,7 @@
   #activationsContainer, #webcam-message, #ssl-message {
     text-align: center;
   }
-  #webcam-message, #ssl-message {
+  #webcam-message, #load-error-message, #ssl-message {
     background-color: #fbb;
     outline: 1px solid rgb(100, 0, 0);
     width: 904px;
@@ -115,6 +115,10 @@
   </paper-dialog>
 
   <canvas id="hiddenCanvas" style="display: none"></canvas>
+
+  <div id="load-error-message" style="display: none">
+    We could not find a webcam, attach one to view the full demo!
+  </div>
 
 </template>
 </dom-module>
